--- a/css/style.css
+++ b/css/style.css
@@ -31,4 +31,148 @@ section, article, aside, footer, header, nav, main {
 	display: block;
 }
 
+/*Base*/
+
+body {
+	font-family: arial, sans-serif;
+	font-size: 1em;
+	line-height: 150%;
+}
+
+a {
+	color: #000;
+}
+
+input {
+    font-size: 8pt;
+    border-radius: 10px;
+    height: 20px;
+    width: 180px;
+}
+
+h4 {
+    letter-spacing: .1em;
+}
+
+p {
+	margin: 1em 0;
+    letter-spacing: .2em;
+}
+
 /*layout*/
+
+.header {
+    background: black;
+    height: 95px;
+}
+
+.container {
+    width: 1260px;
+    margin: 0 auto;
+}
+
+.footer {
+    
+}
+
+
+/*header*/
+
+.menu {
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-top: 22.5px;
+    margin-right: 15px;
+}
+
+.logo {
+    width: 230px;
+    height: 70px;
+    float: left;
+    margin-top: 12.5px;
+}
+
+.searchbar {
+    width: 260px;
+    height: 32px;
+    float: right;
+    margin-top: 31.5px;
+}
+
+.searchbar span {
+    height: 10px;
+    position: relative;
+    right: -28px;
+    top: 2px
+}
+
+/*container*/
+
+.img-caseshow {
+    margin-top: 30px;
+    overflow: hidden
+}
+
+.hottest-news {
+    width: 940px;
+    margin-right: 20px;
+    float: left;
+    position: relative;
+}
+
+.hottest-news-article {
+    height: 626px;
+    position: absolute;
+}
+
+.article-hottest-wrap {
+    position: relative;
+    top: -100px;
+    padding-left: 30px
+}
+
+.article-title {
+    font-size: 24pt;
+    font-weight: bold;
+}
+
+.article-intro {
+    font-size: 12pt;
+    max-height: 50px;
+    max-width: 800px;
+    overflow: hidden;
+}
+
+
+.whats-news {
+    width: 300px;
+    height: 626px;
+    float: right;
+}
+
+.whats-news-title {
+    text-align: center;
+    background: dimgray;
+    color: white;
+    padding: 10px 0 ;
+}
+
+.whats-news-items {
+    height: 117px;
+}
+
+.whats-news-wrap {
+    text-align: center;
+    position: relative;
+    top: -76px
+}
+
+
+
+
+
+
+
+
+
