--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,7 @@ header.sticky {
 
 .img-caseshow {
     margin-top: 30px;
+	overflow: hidden;
 	
 }
 
@@ -362,39 +363,28 @@ header.sticky {
     position: absolute;
 }
 
+
 .article-hottest-wrap {
     position: relative;
-    top: -170px;
+    top: -180px;
     padding-left: 30px
 }
 
 .article-hottest-wrap h4 {
-	font-size: 36pt;
-    font-weight: bold;
+	font-size: 24px;
+	font-weight: bold;
+	line-height: 50px;
+	max-width: 900px;
 	color: white;
-	margin-bottom: 20px
 }
 
 .article-hottest-wrap p {
 	color: white;
-	font-size: 12pt;
+	font-size: 12px;
     max-height: 70px;
     max-width: 800px;
     overflow: hidden;
 	line-height: 2em;
-}
-
-
-.article-title {
-    font-size: 24pt;
-    font-weight: bold;
-}
-
-.article-intro {
-    font-size: 12pt;
-    max-height: 50px;
-    max-width: 800px;
-    overflow: hidden;
 }
 
 .whats-news {
@@ -416,9 +406,19 @@ header.sticky {
 
 .whats-news-wrap {
     text-align: center;
+	margin: 0 auto;
     position: relative;
-    top: -76px
+    top: -82px;
+    font-size: 10pt;
+	color: white;
+	letter-spacing: normal;
+	padding: 0 10px;
+	max-width: 240px;
+	max-height: 50px;
+	overflow: hidden;
+	
 }
+
 
 /*sidebar的css，還在嘗試當中*/
 
