--- a/css/style.css
+++ b/css/style.css
@@ -422,8 +422,7 @@ header.sticky {
 /*main 的 css*/
 
 .main{
-    width:640px;
-    background:yellow;
+    width:960px;
 }
 
 
@@ -438,8 +437,101 @@ header.sticky {
    position: relative;
     display: inline-block;
     margin-left: 1em;
+    margin-top: 2em;
     margin-right: 1em;
 }
+
+.main .floating-block-item {
+    float: left;
+    margin-top: 20px;
+    margin-right: 20px;
+    position: relative;
+}
+
+
+.article-item {
+   width: 300px;
+    height: 350px;
+    overflow: hidden;
+        float: left;
+}
+
+a {
+    text-decoration: none;
+    color: #151719;
+    -webkit-transition: all 150ms ease;
+    -moz-transition: all 150ms ease;
+    transition: all 150ms ease;
+}
+a:-webkit-any-link {
+    color: -webkit-link;
+    text-decoration: underline;
+    cursor: auto;
+}
+
+
+.article-item .article-cover{
+    position: relative;
+    height: 200px;
+}
+
+
+
+div {
+    display: block;
+}
+
+
+
+.bg-wrap {
+    background-color: #151719;
+}
+.bg-wrap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.bg-wrap .bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-position: center;
+    background-size: cover;
+}
+div {
+    display: block;
+}
+
+
+
+
+.channel-signifier {
+    font-size: 15px;
+    position: absolute;
+    top: 0px;
+    left: 50px;
+    color: white;
+    padding-top: 8px;
+    font-weight: bold;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+}
+
+.article-title wrap .article-title{
+    font-size: 20px;
+    color:aliceblue;
+
+}
+.article-title wrap .article-intro{
+    font-size: 16px;
+}
+
+
+
 
 
 /*sidebar的css，還在嘗試當中*/
