--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,7 @@ header.sticky {
 	
 }
 
+
 /*main 的 css*/
 
 .main{
@@ -463,14 +464,6 @@ a {
     -moz-transition: all 150ms ease;
     transition: all 150ms ease;
 }
-a:-webkit-any-link {
-    color: -webkit-link;
-    text-decoration: underline;
-    cursor: auto;
-}
-
-
-
 
 
 .article-item .article-cover{
@@ -486,10 +479,6 @@ div {
 
 h4 {
     display: block;
-    -webkit-margin-before: 1.33em;
-    -webkit-margin-after: 1.33em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
     font-weight: bold;
     color:black;
 }
@@ -559,9 +548,10 @@ div {
 
 .sidebar {
      width: 300px;
-    height: 626px;
+    height: 750px;
     float: right;
     background: gray;
+    position:relative;
 }
 
 
@@ -577,6 +567,7 @@ h3 {
     padding-top: 16px;
     font-size: 16px;
     border-bottom: 2px solid black;
+    position:sticky;
 }
 
 .sidebar-item:hover {
