--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ header.sticky {
     float: left;
     margin-top: 26.6px;
     margin-right: 15px;
+	cursor: pointer;
 }
 
 .logo {
@@ -467,39 +468,56 @@ a {
 
 
 
-/*footer的css. 還在嘗試當中*/
+/*footer*/
+
+.ft-content {
+	height: 53px;
+	padding: 22px 35px 20px 0 ;
+    
+}
+
+.ft-left {
+	float: left;
+}
 
 .ft-contact {
-    width: 50px;
-    height: 50px;
-    float: left;
-    margin-top: 22.5px;
-    margin-right: 15px;
+	display: inline-block;
+	margin-right: 15px;
+}
+
+.ft-contact a {
+	color: white;
+}
+
+.ft-contact a:hover {
+	color: #36BEC3;
 }
 
 .ft-about {
-    width: 50px;
-    height: 50px;
-    float: left;
-    margin-top: 22.5px;
-    margin-right: 15px;
-}
-
-.social-media {
-    width: 260px;
-    height: 32px;
-    float: right;
-    margin-top: 31.5px;
-}
-
-
-.social-media li {
 	display: inline-block;
 }
 
+.ft-about a {
+	color: white;
+}
 
+.ft-about a:hover{
+	color: #36BEC3;
+}
 
+.ft-copyright {
+	color: white;
+	margin-top: 5px;
+}
 
+.ft-right {
+	float: right;
+}
+
+.ft-icon {
+	display: inline-block;
+	margin-right: 10px;
+}
 
 
 
