加入一些照片

--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,7 @@ div {
      width: 300px;
     height: 520px;
     float: right;
-    background: 	#C0C0C0;
+    background:black;
     position:relative;  
     border: none;
     margin-top: 50px;
