--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ header {
 
 
 
-.channel-category {
+.channel {
     width: 560px;
     height: 230px;
     float: left;
@@ -553,7 +553,7 @@ header {
 }
 
 
-.channel-category li {
+.channel li {
     margin: 20px 20px 20px 0;
     display: inline-block;
     text-align: center;
@@ -564,21 +564,21 @@ header {
     margin-top: 5px;
 }
 
-.channel-category li:nth-child(1) span:before {
+.channel li:nth-child(1) span:before {
     content: url(img/present.png);
 	
 }
 
-.channel-category li:nth-child(2) span:before {
+.channel li:nth-child(2) span:before {
     content: url(img/talk.png);
 	
 }
 
-.channel-category li:nth-child(3) span:before {
+.channel li:nth-child(3) span:before {
     content: url(img/team.png);
 }
 
-.channel-category li:nth-child(4) span:before {
+.channel li:nth-child(4) span:before {
     content: url(img/pro.png);
 }
 
